--- a/src/os2datascanner/projects/admin/locale/da/LC_MESSAGES/django.po
+++ b/src/os2datascanner/projects/admin/locale/da/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@
 msgid ""
 msgstr ""
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-03-25 07:25-0500\n"
+"POT-Creation-Date: 2021-04-14 06:51-0500\n"
 "Language: Danish\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -28,7 +28,9 @@ msgid "Brugernavn"
 msgstr "Username"
 
 #: adminapp/models/authentication_model.py:18
-msgid "Initialization vector"
+#, fuzzy
+#| msgid "Initialization vector"
+msgid "Initialization Vector"
 msgstr "Initaliserings vektor"
 
 #: adminapp/models/authentication_model.py:25
@@ -66,39 +68,39 @@ msgstr "Organisation"
 msgid "API key"
 msgstr "API-nøgle"
 
-#: adminapp/models/scannerjobs/scanner_model.py:376
+#: adminapp/models/scannerjobs/scanner_model.py:378
 msgid "scan tag"
 msgstr "scan tag"
 
-#: adminapp/models/scannerjobs/scanner_model.py:379
+#: adminapp/models/scannerjobs/scanner_model.py:381
 msgid "associated scanner job"
 msgstr "tilknyttet scannerjob"
 
-#: adminapp/models/scannerjobs/scanner_model.py:382
+#: adminapp/models/scannerjobs/scanner_model.py:384
 msgid "total sources"
 msgstr "antal kilder"
 
-#: adminapp/models/scannerjobs/scanner_model.py:384
+#: adminapp/models/scannerjobs/scanner_model.py:386
 msgid "explored sources"
 msgstr "udforskede kilder"
 
-#: adminapp/models/scannerjobs/scanner_model.py:387
+#: adminapp/models/scannerjobs/scanner_model.py:389
 msgid "total objects"
 msgstr "antal objekter"
 
-#: adminapp/models/scannerjobs/scanner_model.py:389
+#: adminapp/models/scannerjobs/scanner_model.py:391
 msgid "scanned objects"
 msgstr "scannede objekter"
 
-#: adminapp/models/scannerjobs/scanner_model.py:392
+#: adminapp/models/scannerjobs/scanner_model.py:394
 msgid "size of scanned objects"
 msgstr "størrelse af scannede objekter"
 
-#: adminapp/models/scannerjobs/scanner_model.py:445
+#: adminapp/models/scannerjobs/scanner_model.py:447
 msgid "scan status"
 msgstr "scanstatus"
 
-#: adminapp/models/scannerjobs/scanner_model.py:446
+#: adminapp/models/scannerjobs/scanner_model.py:448
 msgid "scan statuses"
 msgstr "scanstatusser"
 
@@ -946,6 +948,7 @@ msgid "user"
 msgstr "bruger"
 
 #: core/models/administrator.py:37 core/models/client.py:157
+#: organizations/models/organization.py:67
 msgid "client"
 msgstr "kunde"
 
@@ -1016,7 +1019,8 @@ msgstr "administrations-API"
 msgid "client ID"
 msgstr "kunde-ID"
 
-#: core/models/client.py:117
+#: core/models/client.py:117 organizations/models/organization.py:47
+#: organizations/models/organizational_unit.py:42
 msgid "name"
 msgstr "navn"
 
@@ -1024,7 +1028,7 @@ msgstr "navn"
 msgid "e-mail"
 msgstr "e-mail"
 
-#: core/models/client.py:125
+#: core/models/client.py:125 organizations/models/organization.py:79
 msgid "phone number"
 msgstr "telefonnummer"
 
@@ -1032,11 +1036,128 @@ msgstr "telefonnummer"
 msgid "clients"
 msgstr "kunder"
 
-#~ msgid "Login Method"
-#~ msgstr "Login Metode"
+#: organizations/apps.py:8 organizations/models/organization.py:84
+msgid "organizations"
+msgstr "organisationer"
 
-#~ msgid "core"
-#~ msgstr "kerne"
+#: organizations/models/account.py:38 organizations/models/organization.py:43
+#: organizations/models/organizational_unit.py:37
+msgid "UUID"
+msgstr "UUID"
 
-#~ msgid "Are you sure you want to delete this rule?"
-#~ msgstr "Ønsker du virkelig at slette denne regel?"
+#: organizations/models/account.py:42
+msgid "username"
+msgstr "brugernavn"
+
+#: organizations/models/account.py:46
+msgid "first name"
+msgstr "fornavn"
+
+#: organizations/models/account.py:50
+msgid "last name"
+msgstr "efternavn"
+
+#: organizations/models/account.py:56 organizations/models/organization.py:83
+msgid "organization"
+msgstr "organisation"
+
+#: organizations/models/account.py:64 organizations/models/aliases.py:80
+#: organizations/models/position.py:59
+msgid "account"
+msgstr "brugerkonto"
+
+#: organizations/models/account.py:65
+msgid "accounts"
+msgstr "konti"
+
+#: organizations/models/aliases.py:33
+#, fuzzy, python-format
+#| msgid "%(value)s is not a valid SID"
+msgid "%(value)s is not a valid SID"
+msgstr "{value} er ikke et gyldigt SID"
+
+#: organizations/models/aliases.py:43
+msgid "SID"
+msgstr "SID"
+
+#: organizations/models/aliases.py:44 organizations/models/organization.py:73
+msgid "email"
+msgstr "e-mail"
+
+#: organizations/models/aliases.py:45
+msgid "generic"
+msgstr "generisk"
+
+#: organizations/models/aliases.py:74
+msgid "alias ID"
+msgstr "alias ID"
+
+#: organizations/models/aliases.py:87
+msgid "alias type"
+msgstr "aliastype"
+
+#: organizations/models/aliases.py:91
+msgid "value"
+msgstr "værdi"
+
+#: organizations/models/aliases.py:103
+msgid "alias"
+msgstr "alias"
+
+#: organizations/models/aliases.py:104
+msgid "aliases"
+msgstr "aliaser"
+
+#: organizations/models/aliases.py:107
+#, python-brace-format
+msgid "Alias ({type}) for {account_user}: {value}"
+msgstr "Alias ({type}) for {account_user}: {value}"
+
+# TODO: what is the danish term for this???
+#: organizations/models/organization.py:53
+msgid "slug"
+msgstr "slug"
+
+#: organizations/models/organization.py:61
+msgid "top unit"
+msgstr "øverste enhed"
+
+# TODO: or do we prefer `forældreenhed`?
+#: organizations/models/organizational_unit.py:50
+msgid "parent unit"
+msgstr "overordnet enhed"
+
+#: organizations/models/organizational_unit.py:54
+msgid "organizational unit"
+msgstr "organisatorisk enhed"
+
+#: organizations/models/organizational_unit.py:55
+msgid "organizational units"
+msgstr "organisatoriske enheder"
+
+#: organizations/models/position.py:32
+msgid "employee"
+msgstr "medarbejder"
+
+#: organizations/models/position.py:33
+msgid "manager"
+msgstr "leder"
+
+#: organizations/models/position.py:34
+msgid "data protection officer"
+msgstr "data protection officer"
+
+#: organizations/models/position.py:77
+msgid "position"
+msgstr "stilling"
+
+# TODO: or do we prefer another term? E.g. 'relation' or 'tilknytning'?
+#: organizations/models/position.py:78
+msgid "positions"
+msgstr "stillinger"
+
+# TODO: as above
+#: organizations/models/position.py:81
+#, python-brace-format
+msgid "Position: {account} ({role}) at {unit}"
+msgstr "Stilling: {account} ({role}) ved {unit}"
