[#54170] Missing translation on mail notification schedule

--- a/src/os2datascanner/projects/admin/locale/da/LC_MESSAGES/django.po
+++ b/src/os2datascanner/projects/admin/locale/da/LC_MESSAGES/django.po
@@ -149,6 +149,9 @@ msgstr "Regel"
 msgid "name"
 msgstr "navn"
 
+msgid "Email notification interval"
+msgstr "Mailudsendelsesinterval"
+
 #: adminapp/models/rules/rule.py:53
 msgid "description"
 msgstr "Beskrivelse"
