Changed a few translations.

--- a/src/os2datascanner/projects/report/locale/da/LC_MESSAGES/django.po
+++ b/src/os2datascanner/projects/report/locale/da/LC_MESSAGES/django.po
@@ -249,7 +249,7 @@ msgstr "Lederstatistik"
 
 #: reportapp/templates/components/dpo-statistics-template.html:10
 msgid "DPO statistics"
-msgstr "DPO statistik"
+msgstr "DPO-statistik"
 
 #: reportapp/templates/components/dpo-statistics-template.html:27
 #: reportapp/templates/components/filters.html:39
