--- a/src/os2datascanner/projects/report/locale/da/LC_MESSAGES/django.po
+++ b/src/os2datascanner/projects/report/locale/da/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@
 msgid ""
 msgstr ""
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-08-03 11:24+0200\n"
+"POT-Creation-Date: 2023-08-08 16:02+0200\n"
 "Language: Danish\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -958,6 +958,10 @@ msgstr ""
 "For at finde en fil, som der er fundet et match i, kan du trykke på 'Kopier "
 "mappe'-knappen ved matchet. Derefter åbner du stifinderen på din computer, "
 "og indsætter indholdet af din udklipsholder."
+
+#: reportapp/templates/partials/header.html:68
+msgid "OS2datascanner version"
+msgstr "OS2datascanner version"
 
 #: reportapp/templates/password_change.html:6
 #: reportapp/templates/password_change.html:15
