[#57632] Move support button configuration to organization object
[#57632] Select element styling

[#57632] Migrations, translations, changelog

--- a/src/os2datascanner/projects/admin/locale/da/LC_MESSAGES/django.po
+++ b/src/os2datascanner/projects/admin/locale/da/LC_MESSAGES/django.po
@@ -2631,6 +2631,14 @@ msgstr ""
 msgid "return to organizations page"
 msgstr "vend tilbage til organisationer-siden"
 
+#: organizations/admin.py:38
+msgid "Tab access"
+msgstr "Menu-adgang"
+
+#: organizations/admin.py:44
+msgid "Support button settings"
+msgstr "Supportknap indstillinger"
+
 #: organizations/models/organization.py:58
 msgid "slug"
 msgstr "slug"
