--- a/src/os2datascanner/projects/admin/locale/da/LC_MESSAGES/django.po
+++ b/src/os2datascanner/projects/admin/locale/da/LC_MESSAGES/django.po
@@ -1823,7 +1823,7 @@ msgid " in total - in "
 msgstr " i alt - på "
 
 #: adminapp/templates/mail/finished_scannerjob.html:45
-#, python-format
+#, fuzzy, python-format
 msgid ""
 "<strong>%(usererrorlogs)s</strong> errors occured during the scan.<br /><a "
 "href=\"%(admin_login_url)serror-log/\">Click here to inspect the error logs</"
@@ -2266,6 +2266,21 @@ msgid "Password must be updated, when changing username or url."
 msgstr "Adgangskode skal genindtastes, når der skiftes brugernavn eller url."
 
 #: adminapp/views/views.py:200 import_services/models/exported_mixin.py:31
+#: adminapp/views/validators.py:18
+#, python-format
+msgid ""
+"Invariant violation - precedence: %(r1)s has lower precedence than %(r2)s."
+msgstr ""
+"Kan ikke bygge regel: %(r1)s må ikke komme før %(r2)s. Byt venligst om på "
+"rækkefølgen."
+
+#: adminapp/views/validators.py:20
+#, python-format
+msgid ""
+"Invariant violation - standalone: %(r1)s must be used in a compound rule."
+msgstr "Kan ikke bygge regel: %(r1)s skal benyttes sammen med en anden regel."
+
+#: adminapp/views/views.py:211 import_services/models/exported_mixin.py:31
 msgid "created"
 msgstr "oprettet"
 
