--- a/src/os2datascanner/projects/admin/locale/da/LC_MESSAGES/django.po
+++ b/src/os2datascanner/projects/admin/locale/da/LC_MESSAGES/django.po
@@ -207,11 +207,12 @@ msgstr "spring over vedhæftninger"
 
 #: adminapp/models/scannerjobs/gmail.py:41
 msgid ""
-"Do not scan files attachmented to an email. Be careful using this setting as "
-"a lot of attachments might contain relevant matches."
+"Do not scan files attached to an email. Be careful using this setting as a "
+"lot of attachments might contain sought-after matches."
 msgstr ""
 "Undlad at scanne filer vedhæftet en email. Vær forsigt med at anvende denne "
-"indstilling eftersom, at der kan befinde sig relevante matches i vedhæftninger."
+"indstilling eftersom, at der kan befinde sig relevante matches i "
+"vedhæftninger."
 
 #: adminapp/models/scannerjobs/msgraph.py:71
 msgid "Scan deleted items folder"
@@ -1054,7 +1055,7 @@ msgstr "Beskrivelse af regel"
 
 #: adminapp/templates/os2datascanner/customrule_form.html:147
 #: adminapp/templates/os2datascanner/regexrule_form.html:254
-#: adminapp/templates/os2datascanner/scanner_form.html:729
+#: adminapp/templates/os2datascanner/scanner_form.html:727
 msgid "Save changes"
 msgstr "Gem ændringer"
 
@@ -1695,11 +1696,11 @@ msgstr "vælg brugere fra organisatoriske enheder"
 msgid "Scanner settings"
 msgstr "Scannerindstillinger"
 
-#: adminapp/templates/os2datascanner/scanner_form.html:699
+#: adminapp/templates/os2datascanner/scanner_form.html:697
 msgid "Schedule scan"
 msgstr "Planlæg scan"
 
-#: adminapp/templates/os2datascanner/scanner_form.html:706
+#: adminapp/templates/os2datascanner/scanner_form.html:704
 msgid ""
 "Schedule your scan by creating a fixed interval or adding a date to complete "
 "the scannerjob."
@@ -1707,7 +1708,7 @@ msgstr ""
 "Planlæg dit scan ved at oprette et fast interval eller tilføj en dato for "
 "afvikling af scannerjobbet."
 
-#: adminapp/templates/os2datascanner/scanner_form.html:719
+#: adminapp/templates/os2datascanner/scanner_form.html:717
 msgid "The scanner will start at the following time for the selected days:"
 msgstr "Scanneren vil starte på følgende tidspunkt på de valgte dage:"
 
